2008-10-15  Lillian Angel  <langel@redhat.com>

	* Makefile.am
	(EXTRA_DIST): Added fsg.sh.
	(clean-distlocal): Added jni-common.o.
	* .hgtags: Reverted.

2008-10-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* ChangeLog: Fix typo.
	* INSTALL: Fix typos and make installation
	requirements clearer.
	* Makefile.am:
	Patch the OpenJDK build with the version
	of IcedTea being used. Use $(HG) instead of 'hg'.
	* configure.ac:
	Check for Mercurial.
	* patches/icedtea-version.patch:
	Fix to use IcedTea6.

2008-10-15  Xerxes Rånby <xerxes@zafena.se>

	* patches/icedtea-arch.patch: Update for m68k.

2008-10-15  Mark Wielaard  <mark@klomp.org>

	* NEWS: Add hint about using different rhino versions.

2008-10-15  Matthias Klose  <doko@ubuntu.com>

	* NEWS: Add support for more ports for Zero builds.

2008-10-15  Mark Wielaard  <mark@klomp.org>

	* NEWS: Add Rhino javascript and cleaned up crypto support.

2008-10-15  Lillian Angel  <langel@redhat.com>

	* NEWS: Updated for 1.3 release.

2008-10-15  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-hotspot-6b11-7b24.patch: Remove.

2008-10-14 Ioana Ivan <iivand@redhat.com>

	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioDataLine.java
	(open): startedListener only sends a START event when playback first
	starts and after an underflow
	(start): sends a START event if there's data on the line

2008-10-14 Ioana Ivan <iivan@redhat.com>

	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioClip.java
	(connectLine): changed bufferAttributes to fix crackling in the clip tests


2008-10-14 Omair Majid <omajid@redhat.com>

	* pulseaudio/src/java/org/classpat/icedtea/pulseaudio/PulseAudioDataLine.java
	(connect): Removed debug output.

2008-10-14 Omair Majid <omajid@redhat.com>

	* pulseaudio/src/java/org/classpath/icedtea/pulseaudio/PulseAudioTargetDataLine.java
	(read): Commented out debug output.

2008-10-14 Omair Majid <omajid@redhat.com>
