@@ -89,15 +89,15 @@ install:
 	$(ICEDTEAPLUGIN_CLEAN) hotspot hotspot-helper clean-extra \
 	clean-jtreg clean-jtreg-reports clean-visualvm clean-nbplatform
 
-EXTRA_DIST = rt generated $(ICEDTEA_PATCHES) $(ICEDTEA_FSG_PATCHES) \
-	$(ICEDTEA_ECJ_PATCH) gcjwebplugin.cc tools-copy contrib ports \
-	patches/icedtea-gcc-4.3.patch extra $(ZERO_PATCHES) \
-	patches/icedtea-arch.patch patches/icedtea-cacao.patch \
+EXTRA_DIST = rt generated \
+	patches/icedtea-*.patch \
+	gcjwebplugin.cc tools-copy contrib ports \
+	extra overlays \
 	javaws.png javaws.desktop visualvm.desktop \
-	overlays extra jconsole.desktop policytool.desktop \
-	test/jtreg patches/icedtea-plugin.patch \
-	patches/icedtea-liveconnect.patch IcedTeaPlugin.cc \
-	HACKING patches/icedtea-visualvm.patch pulseaudio fsg.sh
+	jconsole.desktop policytool.desktop \
+	test/jtreg \
+	IcedTeaPlugin.cc \
+	HACKING pulseaudio fsg.sh
 
 # The Binary plugs directory is called jdk1.7.0 for historical reasons. The
 # name is completely irrelevant; only contains the plugs to build IcedTea.
