@@ -1,3 +1,8 @@
+2008-10-15  Mark Wielaard  <mark@klomp.org>
+
+	* Makefile.am (EXTRA_DIST): Always include all patches,
+	irrespective of any configure options.
+
 2008-10-15  Lillian Angel  <langel@redhat.com>
 
 	* Makefile.am
